--- a/src/patterns/OneOrb/demo.html
+++ b/src/patterns/OneOrb/demo.html
@@ -10,8 +10,8 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to top, rgba(89,88,179,1) 0%,rgba(76,110,207,0.29) 17%,rgba(76,110,207,0) 24%), 
-                        linear-gradient(20deg, #2ef5cd 0%,#4c6ecf 44%,#6567ce 60%,#fa99c7 100%);
+            background: var(--background-gradient-1),
+                        var(--background-gradient-2);
             overflow: hidden;
         }
 
@@ -24,28 +24,35 @@
 </head>
 <body>
     <div id="orb-container">
-        <div id="orb"></div>
+        <div id="orb" class="orb"></div>
     </div>
 
     <script type="module">
         import OneOrb from './OneOrb.js';
 
-        // Initialize the effect
-        const orb = new OneOrb();
-        const { css, keyframes } = orb.generate();
+        async function initializeOrb() {
+            // Initialize the effect
+            const orb = new OneOrb();
+            
+            // Generate styles
+            const { css, keyframes } = await orb.generate();
 
-        // Apply the generated styles
-        const styleSheet = document.createElement('style');
-        styleSheet.textContent = `
-            ${keyframes}
-            #orb {
+            // Apply the generated styles
+            const styleSheet = document.createElement('style');
+            styleSheet.textContent = `
+                ${keyframes}
                 ${css}
-            }
-        `;
-        document.head.appendChild(styleSheet);
+            `;
+            document.head.appendChild(styleSheet);
 
-        // Optional: Add controls for live parameter updates
-        // This would require additional UI elements and css.gui integration
+            // Optional: Add click handler to regenerate
+            document.addEventListener('click', async () => {
+                await orb.generate();
+            });
+        }
+
+        // Start the initialization
+        initializeOrb().catch(console.error);
     </script>
 </body>
 </html>
